generated/checker-for-evaluation/generated/test-Buffer-Overflow-97cba232549b9fe7e491fb60a69cf93075015f29/build_logs/0/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::OffByOneVisitor::reportBug(const clang::ArraySubscriptExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:113:29: error: ‘class clang::ento::BugReporter’ has no member named ‘getBugType’
  113 |       *Ctx.getBugReporter().getBugType(),
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:167:78: error: invalid initialization of reference of type ‘clang::ento::CheckerContext&’ from expression of type ‘clang::ASTContext’
  167 |                   if (ExprHasName(MulBO->getLHS(), "MAX_PIPES", BR.getContext()) ||
      |                                                                 ~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:21:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:168:78: error: invalid initialization of reference of type ‘clang::ento::CheckerContext&’ from expression of type ‘clang::ASTContext’
  168 |                       ExprHasName(MulBO->getRHS(), "MAX_PIPES", BR.getContext())) {
      |                                                                 ~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:21:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:173:73: error: no matching function for call to ‘clang::ento::CheckerContext::CheckerContext(const clang::FunctionDecl*&, std::nullptr_t, clang::ASTContext&)’
  173 |                     CheckerContext DummyCtx(FD, nullptr, BR.getContext());
      |                                                                         ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:13:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note: candidate: ‘clang::ento::CheckerContext::CheckerContext(clang::ento::NodeBuilder&, clang::ento::ExprEngine&, clang::ento::ExplodedNode*, const clang::ProgramPoint&, bool)’
   41 |   CheckerContext(NodeBuilder &builder,
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note:   candidate expects 5 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(const clang::ento::CheckerContext&)’
   24 | class CheckerContext {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(clang::ento::CheckerContext&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:203:80: error: invalid initialization of reference of type ‘clang::ento::CheckerContext&’ from expression of type ‘clang::ASTContext’
  203 |                     if (ExprHasName(MulBO->getLHS(), "MAX_PIPES", BR.getContext()) ||
      |                                                                   ~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:21:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:204:80: error: invalid initialization of reference of type ‘clang::ento::CheckerContext&’ from expression of type ‘clang::ASTContext’
  204 |                         ExprHasName(MulBO->getRHS(), "MAX_PIPES", BR.getContext())) {
      |                                                                   ~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:21:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:205:75: error: no matching function for call to ‘clang::ento::CheckerContext::CheckerContext(const clang::FunctionDecl*&, std::nullptr_t, clang::ASTContext&)’
  205 |                       CheckerContext DummyCtx(FD, nullptr, BR.getContext());
      |                                                                           ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:13:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note: candidate: ‘clang::ento::CheckerContext::CheckerContext(clang::ento::NodeBuilder&, clang::ento::ExprEngine&, clang::ento::ExplodedNode*, const clang::ProgramPoint&, bool)’
   41 |   CheckerContext(NodeBuilder &builder,
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note:   candidate expects 5 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(const clang::ento::CheckerContext&)’
   24 | class CheckerContext {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(clang::ento::CheckerContext&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
